# RocketManPSP

./: .gitignore  .gitmodules  Makefile  README.adoc  README.md
Dependencies/Rengine/: Makefile
Dependencies/RocketEngine/: Makefile
PSP/: EBOOT.PBP  Makefile  PSP.vcxproj.filters  Projectile.hpp  Tutorial.elf  Tutorial.prx  Vector2d.hpp  Vector3d.hpp  gfx.cpp  gfx.hpp  main.cpp  todo.txt  utils.hpp
PSP/Debug/: vc142.idb
PSP/bmp/: loadbmp.cpp  loadbmp.h
PSP_TBC/: CMakeLists.txt  EBOOT.PBP  Makefile  PARAM.SFO  PSP.vcxproj  Tutorial.elf  Tutorial.prx  gfx.cpp  gfx.hpp  main.cpp
PSP_TBC/OpenSimplexNoise/: OpenSimplexNoise.cpp  OpenSimplexNoise.h
TestSpace/: endian_swap.cpp
TestSpace/logger/: logger.cpp  logger.h  main.cpp
src/: EBOOT.PBP  Makefile  PARAM.SFO  Projectile.hpp  RocketMan.cpp  Tutorial.elf  Tutorial.prx  Vector2d.hpp  animation.cpp  cppclean  game_globals.h  game_utils.cpp  gamestate.cpp  gamestate.h  gfx.cpp  gfx.hpp  globals.h  image.cpp  image.hpp  object.h  objects.hpp  utils.cpp  utils.h
src/GUI/: component.cpp  component.h  menu.cpp  menu.h  text_builder.cpp  text_builder.h
src/bmp/: loadbmp.cpp  loadbmp.h
src/controls/: control_reader.cpp  control_reader.h
src/game/: game_utils.cpp  game_utils.h  gamestate.cpp  gamestate.h  utils.cpp  utils.h
src/graphics/: game_graphics.cpp  game_graphics.h  gfx.cpp  gfx.hpp
src/image/: animation.cpp  animation.h  image.cpp  image.h  image_utils.cpp  image_utils.h
src/image_builder/: component.cpp  component.h  component.hpp  menu.cpp  menu.h  text_builder.cpp  text_builder.h
(+138 files in other folders)
